# Titan-Brain

./: .dockerignore  .gitignore  Dockerfile  TB-ACT-001A.md  TB-ACT-001B.md  TB-ACT-001C.md  TB-ACT-001D.md  TB-CI-001.md  TB-DEPLOY-001B.md  TB-EVAL-002A.md  TB-EVAL-002B.md  TB-EVAL-003.md  TB-EVAL-005A.md  TB-EVAL-005B.md  TB-EVAL-005C.md  TB-EVAL-005D.md  TB-EVAL-006A.md  TB-EVAL-006B.md  TB-EVAL-006C.md  TB-EVAL-007A.md  TB-EVAL-007B.md  TB-EVAL-008A.md  TB-EVAL-008B.md  TB-EVAL-008C.md  TB-EVAL-009A.md  TB-EVAL-009B.md  TB-EVAL-009C.md  TB-POC-001.md  TB-SAFE-001A.md  TB-SAFE-001B.md  TB-SAFE-001C.md  TB-SAFE-001D.md  VALIDACE_V02.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
core/: actuator_fault_injection.py  actuator_feedback.py  arbitrator.py  braking.py  bus.py  command_governor.py  command_governor_fault_injection.py  command_observability.py  dynamic_envelope_evaluator.py  incident_store.py  motion_envelope.py  multi_sensor_envelope.py  observability.py  orchestrator.py  priority_selector.py  safety.py  safety_fault_injection.py  safety_recovery_manager.py  safety_supervisor.py  stability.py  stop_ack_monitor.py  telemetry_blackbox.py  trace.py
core/adapters/: __init__.py  ros_diagnostics.py  ros_geometry.py  ros_observation.py
core/types/: __init__.py  delivery.py  incident.py  infrastructure.py  payload.py
docker/: entrypoint.sh
requirements/: constraints.txt
ros2_ws/src/titan_brain_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/titan_brain_msgs/msg/: ActuatorFeedback.msg  ArbitrationStatus.msg  CommandPathObservabilityStatus.msg  DirectionalSafetyObservation.msg  EnvelopeDiagnostics.msg  EvaluatorObservabilityStatus.msg  PermittedMotionEnvelope.msg  SafetyEvaluationStatus.msg  SafetyHeartbeat.msg  SafetyIntent.msg  SafetyLifecycleStatus.msg  SafetyObservation.msg  SafetyRelayStatus.msg  SafetyStabilityStatus.msg  SafetySupervisorStatus.msg  StopAcknowledgement.msg  SystemFaultStatus.msg
ros2_ws/src/titan_brain_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/titan_brain_ros/config/: titan_brain.yaml  velocity_arbiter.yaml
ros2_ws/src/titan_brain_ros/launch/: command_governor.launch.py  safety_control_plane.launch.py  titan_brain.launch.py
ros2_ws/src/titan_brain_ros/test/: test_actuator_feedback_monitor_node.py  test_command_governor_node.py  test_command_path_observability_node.py  test_dynamic_envelope_node.py  test_e2e_transport.py  test_integration_rosbag_007b.py  test_integration_rosbag_008c.py  test_multi_sensor_envelope_node.py  test_safety_loop_supervisor_node.py  test_safety_observation_node.py  test_safety_recovery_manager_node.py  test_safety_velocity_arbiter_node.py  test_telemetry_blackbox_node.py  test_velocity_arbiter_node.py
ros2_ws/src/titan_brain_ros/titan_brain_ros/: __init__.py  actuator_feedback_monitor_node.py  command_governor_node.py  command_path_observability_node.py  dynamic_envelope_node.py  multi_sensor_envelope_node.py  safety_loop_supervisor_node.py  safety_observation_node.py  safety_recovery_manager_node.py  safety_velocity_arbiter_node.py  telemetry_blackbox_node.py  velocity_arbiter_node.py
scripts/: create_tb_act_001_summary.py  create_tb_eval_006_summary.py  create_tb_safe_001_summary.py  quality-gate.sh  verify_tb_eval_006.py  verify_tb_safe_001.py
tests/: test_actuator_fault_injection.py  test_actuator_feedback.py  test_braking_envelope.py  test_bus.py  test_cli.py  test_command_governor.py  test_command_governor_fault_injection.py  test_command_observability.py  test_deploy_contracts.py  test_directional_motion_envelope.py  test_dynamic_command_arbiter.py  test_dynamic_envelope_evaluator.py  test_dynamic_safety_evaluator.py  test_module.py  test_motion_envelope.py  test_motion_envelope_arbiter.py  test_multi_sensor_envelope.py  test_observability.py  test_orchestrator.py  test_priority_selector.py  test_ros_geometry.py  test_ros_observation_adapter.py  test_ros_package_contracts.py  test_safety_fault_injection.py  test_safety_recovery_manager.py  test_safety_stability.py  test_safety_supervisor.py  test_stop_ack_monitor.py  test_telemetry_blackbox.py  test_trace.py  test_velocity_arbiter.py
tests/poc/: test_safety_decision_loop.py
titan_brain.egg-info/: SOURCES.txt  requires.txt
(+5 files in other folders)
