<?xml version="1.0"?>
<package format="3">
  <name>titan_brain_msgs</name>
  <version>0.1.0</version>
  <description>ROS 2 message contracts for Titan Brain safety evaluation.</description>
  <maintainer email="olivertribus-alt@users.noreply.github.com">Oliver Tribus</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
