<?xml version="1.0"?>
<package format="3">
  <name>titan_brain_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 Jazzy node wrapper for Titan Brain safety evaluation.</description>
  <maintainer email="olivertribus-alt@users.noreply.github.com">Oliver Tribus</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>titan_brain_msgs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
